--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
+  provider: ^4.0.4
   freezed_annotation: ^0.7.1
   flutter:
     sdk: flutter
